hotfix: remove whitespace for empry li, fix in speakingtitle

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -2961,6 +2961,10 @@ main {
 			}
 		}
 	}
+	li:empty
+	{
+	    margin-top:0px;
+	}
 }
 
 // NO ACCESS //
